--- a/package.json
+++ b/package.json
@@ -1,413 +1,42 @@
 {
   "name": "my-nextjs-electron-app",
   "version": "1.0.0",
-  "description": "",
   "main": "electron/main.js",
-  "dependencies": {
-    "7zip-bin": "^5.2.0",
-    "abbrev": "^1.1.1",
-    "acorn": "^8.15.0",
-    "acorn-jsx": "^5.3.2",
-    "agent-base": "^7.1.4",
-    "agentkeepalive": "^4.6.0",
-    "aggregate-error": "^3.1.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "app-builder-bin": "^5.0.0-alpha.12",
-    "app-builder-lib": "^26.0.12",
-    "argparse": "^2.0.1",
-    "async": "^3.2.6",
-    "async-exit-hook": "^2.0.1",
-    "asynckit": "^0.4.0",
-    "at-least-node": "^1.0.0",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.11.0",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "bl": "^4.1.0",
-    "boolean": "^3.2.0",
-    "brace-expansion": "^1.1.12",
-    "braces": "^3.0.3",
-    "browserslist": "^4.25.4",
-    "buffer": "^5.7.1",
-    "buffer-crc32": "^0.2.13",
-    "buffer-from": "^1.1.2",
-    "builder-util": "^26.0.11",
-    "builder-util-runtime": "^9.3.1",
-    "busboy": "^1.6.0",
-    "cacache": "^16.1.3",
-    "cacheable-lookup": "^5.0.4",
-    "cacheable-request": "^7.0.4",
-    "call-bind-apply-helpers": "^1.0.2",
-    "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001739",
-    "chalk": "^4.1.2",
-    "chownr": "^2.0.0",
-    "chromium-pickle-js": "^0.2.0",
-    "ci-info": "^3.9.0",
-    "clean-stack": "^2.2.0",
-    "cli-cursor": "^3.1.0",
-    "cli-spinners": "^2.9.2",
-    "client-only": "^0.0.1",
-    "cliui": "^8.0.1",
-    "clone": "^1.0.4",
-    "clone-response": "^1.0.3",
-    "color": "^4.2.3",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "color-string": "^1.9.1",
-    "combined-stream": "^1.0.8",
-    "commander": "^5.1.0",
-    "compare-version": "^0.1.2",
-    "concat-map": "^0.0.1",
-    "concurrently": "^9.2.1",
-    "config-file-ts": "^0.2.8-rc1",
-    "cross-dirname": "^0.1.0",
-    "cross-spawn": "^7.0.6",
-    "csstype": "^3.1.3",
-    "date-fns": "^2.30.0",
-    "debug": "^4.4.1",
-    "decompress-response": "^6.0.0",
-    "deep-is": "^0.1.4",
-    "defaults": "^1.0.4",
-    "defer-to-connect": "^2.0.1",
-    "define-data-property": "^1.1.4",
-    "define-properties": "^1.2.1",
-    "delayed-stream": "^1.0.0",
-    "detect-libc": "^2.0.4",
-    "detect-node": "^2.1.0",
-    "dir-compare": "^4.2.0",
-    "dmg-builder": "^26.0.12",
-    "dotenv": "^16.6.1",
-    "dotenv-expand": "^11.0.7",
-    "dunder-proto": "^1.0.1",
-    "eastasianwidth": "^0.2.0",
-    "ejs": "^3.1.10",
-    "electron-builder-squirrel-windows": "^26.0.12",
-    "electron-publish": "^26.0.11",
-    "electron-to-chromium": "^1.5.214",
-    "electron-winstaller": "^5.4.0",
-    "electronmon": "^2.0.3",
-    "emoji-regex": "^8.0.0",
-    "encoding": "^0.1.13",
-    "end-of-stream": "^1.4.5",
-    "env-paths": "^2.2.1",
-    "err-code": "^2.0.3",
-    "es-define-property": "^1.0.1",
-    "es-errors": "^1.3.0",
-    "es-object-atoms": "^1.1.1",
-    "es-set-tostringtag": "^2.1.0",
-    "es6-error": "^4.1.1",
-    "escalade": "^3.2.0",
-    "escape-string-regexp": "^4.0.0",
-    "eslint": "^9.34.0",
-    "eslint-scope": "^8.4.0",
-    "eslint-visitor-keys": "^4.2.1",
-    "espree": "^10.4.0",
-    "esquery": "^1.6.0",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^5.3.0",
-    "esutils": "^2.0.3",
-    "exponential-backoff": "^3.1.2",
-    "extract-zip": "^2.0.1",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^2.0.6",
-    "fd-slicer": "^1.1.0",
-    "file-entry-cache": "^8.0.0",
-    "filelist": "^1.0.4",
-    "fill-range": "^7.1.1",
-    "find-up": "^5.0.0",
-    "flat-cache": "^4.0.1",
-    "flatted": "^3.3.3",
-    "follow-redirects": "^1.15.11",
-    "foreground-child": "^3.3.1",
-    "form-data": "^4.0.4",
-    "fraction.js": "^4.3.7",
-    "fs-extra": "^8.1.0",
-    "fs-minipass": "^2.1.0",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.2",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.3.0",
-    "get-proto": "^1.0.1",
-    "get-stream": "^5.2.0",
-    "glob": "^7.2.3",
-    "glob-parent": "^6.0.2",
-    "glob-to-regexp": "^0.4.1",
-    "global-agent": "^3.0.0",
-    "globals": "^14.0.0",
-    "globalthis": "^1.0.4",
-    "gopd": "^1.2.0",
-    "got": "^11.8.6",
-    "graceful-fs": "^4.2.11",
-    "has-flag": "^4.0.0",
-    "has-property-descriptors": "^1.0.2",
-    "has-symbols": "^1.1.0",
-    "has-tostringtag": "^1.0.2",
-    "hasown": "^2.0.2",
-    "hosted-git-info": "^4.1.0",
-    "http-cache-semantics": "^4.2.0",
-    "http-proxy-agent": "^7.0.2",
-    "http2-wrapper": "^1.0.3",
-    "https-proxy-agent": "^7.0.6",
-    "humanize-ms": "^1.2.1",
-    "iconv-lite": "^0.6.3",
-    "ieee754": "^1.2.1",
-    "ignore": "^5.3.2",
-    "import-fresh": "^3.3.1",
-    "import-from": "^3.0.0",
-    "imurmurhash": "^0.1.4",
-    "indent-string": "^4.0.0",
-    "infer-owner": "^1.0.4",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ip-address": "^10.0.1",
-    "is-arrayish": "^0.3.2",
-    "is-ci": "^3.0.1",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-glob": "^4.0.3",
-    "is-interactive": "^1.0.0",
-    "is-lambda": "^1.0.1",
-    "is-number": "^7.0.0",
-    "is-unicode-supported": "^0.1.0",
-    "isbinaryfile": "^5.0.6",
-    "isexe": "^2.0.0",
-    "jackspeak": "^3.4.3",
-    "jake": "^10.9.4",
-    "joi": "^17.13.3",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^4.1.0",
-    "json-buffer": "^3.0.1",
-    "json-schema-traverse": "^0.4.1",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json-stringify-safe": "^5.0.1",
-    "json5": "^2.2.3",
-    "jsonfile": "^4.0.0",
-    "keyv": "^4.5.4",
-    "lazy-val": "^1.0.5",
-    "levn": "^0.4.1",
-    "locate-path": "^6.0.0",
-    "lodash": "^4.17.21",
-    "lodash.difference": "^4.5.0",
-    "lodash.merge": "^4.6.2",
-    "log-symbols": "^4.1.0",
-    "loose-envify": "^1.4.0",
-    "lowercase-keys": "^2.0.0",
-    "lru-cache": "^6.0.0",
-    "make-fetch-happen": "^10.2.1",
-    "matcher": "^3.0.0",
-    "math-intrinsics": "^1.1.0",
-    "micromatch": "^4.0.8",
-    "mime": "^2.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "mimic-fn": "^2.1.0",
-    "mimic-response": "^1.0.1",
-    "minimatch": "^10.0.3",
-    "minimist": "^1.2.8",
-    "minipass": "^3.3.6",
-    "minipass-collect": "^1.0.2",
-    "minipass-fetch": "^2.1.2",
-    "minipass-flush": "^1.0.5",
-    "minipass-pipeline": "^1.2.4",
-    "minipass-sized": "^1.0.3",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
-    "ms": "^2.1.3",
-    "nanoid": "^3.3.11",
-    "natural-compare": "^1.4.0",
-    "negotiator": "^0.6.4",
-    "next": "^13.4.19",
-    "node-abi": "^3.77.0",
-    "node-api-version": "^0.2.1",
-    "node-releases": "^2.0.19",
-    "nopt": "^6.0.0",
-    "normalize-path": "^2.1.1",
-    "normalize-range": "^0.1.2",
-    "normalize-url": "^6.1.0",
-    "object-keys": "^1.1.1",
-    "once": "^1.4.0",
-    "onetime": "^5.1.2",
-    "optionator": "^0.9.4",
-    "ora": "^5.4.1",
-    "p-cancelable": "^2.1.1",
-    "p-limit": "^3.1.0",
-    "p-locate": "^5.0.0",
-    "p-map": "^4.0.0",
-    "package-json-from-dist": "^1.0.1",
-    "parent-module": "^1.0.1",
-    "path-exists": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^3.1.1",
-    "path-scurry": "^1.11.1",
-    "pe-library": "^0.4.1",
-    "pend": "^1.2.0",
-    "picocolors": "^1.1.1",
-    "picomatch": "^2.3.1",
-    "pify": "^4.0.1",
-    "plist": "^3.1.0",
-    "postcss": "^8.5.6",
-    "postcss-value-parser": "^4.2.0",
-    "postject": "^1.0.0-alpha.6",
-    "prelude-ls": "^1.2.1",
-    "prettier": "^3.6.2",
-    "proc-log": "^2.0.1",
-    "progress": "^2.0.3",
-    "promise-inflight": "^1.0.1",
-    "promise-retry": "^2.0.1",
-    "proxy-from-env": "^1.1.0",
-    "pump": "^3.0.3",
-    "punycode": "^2.3.1",
-    "quick-lru": "^5.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "read-binary-file-arch": "^1.0.6",
-    "readable-stream": "^3.6.2",
-    "remove-trailing-separator": "^1.1.0",
-    "require-directory": "^2.1.1",
-    "resedit": "^1.7.2",
-    "resolve-alpn": "^1.2.1",
-    "resolve-from": "^5.0.0",
-    "responselike": "^2.0.1",
-    "restore-cursor": "^3.1.0",
-    "retry": "^0.12.0",
-    "rimraf": "^3.0.2",
-    "roarr": "^2.15.4",
-    "runtime-required": "^1.1.0",
-    "rxjs": "^7.8.2",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "sanitize-filename": "^1.6.3",
-    "sax": "^1.4.1",
-    "scheduler": "^0.26.0",
-    "semver": "^7.7.2",
-    "semver-compare": "^1.0.0",
-    "serialize-error": "^7.0.1",
-    "sharp": "^0.34.3",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "shell-quote": "^1.8.3",
-    "signal-exit": "^3.0.7",
-    "simple-swizzle": "^0.2.2",
-    "simple-update-notifier": "^2.0.0",
-    "smart-buffer": "^4.2.0",
-    "socks": "^2.8.7",
-    "socks-proxy-agent": "^7.0.0",
-    "source-map": "^0.6.1",
-    "source-map-js": "^1.2.1",
-    "source-map-support": "^0.5.21",
-    "spawn-command": "^0.0.2",
-    "sprintf-js": "^1.1.3",
-    "ssri": "^9.0.1",
-    "stat-mode": "^1.0.0",
-    "streamsearch": "^1.1.0",
-    "string_decoder": "^1.3.0",
-    "string-width": "^4.2.3",
-    "string-width-cjs": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "strip-ansi-cjs": "^6.0.1",
-    "strip-json-comments": "^3.1.1",
-    "styled-jsx": "^5.1.6",
-    "sumchecker": "^3.0.1",
-    "supports-color": "^8.1.1",
-    "tailwindcss": "^4.1.12",
-    "tar": "^6.2.1",
-    "temp": "^0.9.4",
-    "temp-file": "^3.4.0",
-    "tiny-async-pool": "^1.3.0",
-    "tmp": "^0.2.5",
-    "tmp-promise": "^3.0.3",
-    "to-regex-range": "^5.0.1",
-    "tree-kill": "^1.2.2",
-    "truncate-utf8-bytes": "^1.0.2",
-    "tslib": "^2.8.1",
-    "type-check": "^0.4.0",
-    "type-fest": "^0.13.1",
-    "typescript": "^5.9.2",
-    "undici-types": "^6.21.0",
-    "unique-filename": "^2.0.1",
-    "unique-slug": "^3.0.0",
-    "universalify": "^0.1.2",
-    "unixify": "^1.0.0",
-    "update-browserslist-db": "^1.1.3",
-    "uri-js": "^4.4.1",
-    "utf8-byte-length": "^1.0.5",
-    "util-deprecate": "^1.0.2",
-    "wait-on": "^8.0.4",
-    "watchboy": "^0.4.3",
-    "watchpack": "^2.4.0",
-    "wcwidth": "^1.0.1",
-    "which": "^2.0.2",
-    "word-wrap": "^1.2.5",
-    "wrap-ansi": "^7.0.0",
-    "wrap-ansi-cjs": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "xmlbuilder": "^15.1.1",
-    "y18n": "^5.0.8",
-    "yallist": "^4.0.0",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "yauzl": "^2.10.0",
-    "yocto-queue": "^0.1.0",
-    "zod": "^3.21.4"
-  },
+  "scripts": {
+  "dev:next": "cd next && npm run dev",
+  "dev:electron": "wait-on tcp:3000 && electron .",
+  "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
+  "build:next": "cd next && npm run build",
+  "build:electron": "electron-builder",
+  "package:win": "npm run build:next && npm run build:electron -- --win",
+  "package:mac": "npm run build:next && npm run build:electron -- --mac",
+  "package:linux": "npm run build:electron -- --linux"
+},
   "devDependencies": {
-    "concurrently": "^9.0.0",
-    "cross-env": "^7.0.3",
-    "electron": "^31.0.0",
-    "electron-builder": "^26.0.12",
-    "wait-on": "^8.0.0"
-  },
-    "scripts": {
-    "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
-    "dev:next": "cd next && npm run dev",
-    "dev:electron": "wait-on tcp:3000 && electron .",
-    "build:next": "cd next && npm run build",
-    "build:electron": "electron-builder",
-    "package:win": "npm run build:next && electron-builder --win",
-    "package:mac": "npm run build:next && electron-builder --mac",
-    "package:linux": "npm run build:next && electron-builder --linux",
-    "package:all": "npm run build:next && electron-builder --linux --win"
+    "electron": "^26.2.0",
+    "electron-builder": "^24.6.0",
+    "wait-on": "^7.0.1",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3"
   },
   "build": {
     "appId": "com.myapp.nextjs.electron",
     "productName": "MyNextJSElectronApp",
+    "directories": {
+      "buildResources": "next/public",
+      "output": "dist"
+    },
     "files": [
       "electron/**/*",
       "next/out/**/*",
-      "node_modules/**/*",
+      "next/public/**/*",
       "package.json"
     ],
-    "directories": {
-      "buildResources": "assets"
+    "mac": {
+      "target": "dmg"
     },
     "win": {
-      "icon": "assets/icon.ico",
-      "target": [
-        {
-          "target": "nsis",
-          "arch": ["x64", "ia32"]
-        }
-      ]
-    },
-    "mac": {
-      "icon": "assets/icon.icns",
-      "target": ["dmg"]
+      "target": "nsis"
     }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/raja2282001/my-nextjs-electron-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/raja2282001/my-nextjs-electron-app/issues"
-  },
-  "homepage": "https://github.com/raja2282001/my-nextjs-electron-app#readme"
+  }
 }
