complet net+electron app

--- a/next/.env
+++ b/next/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:7000
+# NEXT_PUBLIC_API_URL=http://localhost:7000
+NEXT_PUBLIC_API_URL=https://ecommerce-lyart-tau.vercel.app
