--- a/next/package.json
+++ b/next/package.json
@@ -21,6 +21,7 @@
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "electron-serve": "^2.1.1",
     "next": "15.5.2",
     "postcss": "^8.5.6",
