--- a/next/package.json
+++ b/next/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "19.1.9",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "better-sqlite3": "^12.2.0",
     "electron-serve": "^2.1.1",
     "next": "15.5.2",
     "postcss": "^8.5.6",
@@ -33,6 +34,7 @@
     "concurrently": "^9.2.1",
     "electron": "^38.0.0",
     "electron-builder": "^26.0.12",
+    "electron-rebuild": "^3.2.9",
     "tailwindcss": "^4.1.12"
   },
   "build": {
