--- a/next/package.json
+++ b/next/package.json
@@ -16,14 +16,20 @@
     "package:all": "next build && electron-builder --win --mac --linux"
   },
   "dependencies": {
+    "@apollo/client": "^3.14.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "24.3.1",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-queue": "^3.1.0",
+    "apollo3-cache-persist": "^0.15.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "better-sqlite3": "^12.2.0",
     "electron-serve": "^2.1.1",
+    "graphql": "^16.11.0",
+    "localforage": "^1.10.0",
     "next": "15.5.2",
     "postcss": "^8.5.6",
     "react": "19.1.1",
