change in graphql

--- a/next/.env
+++ b/next/.env
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_API_URL=http://localhost:7000
+# NEXT_PUBLIC_API_URL=http://localhost:7000
 
 
 #VERCEL
 # NEXT_PUBLIC_API_URL=https://ecommerce-lyart-tau.vercel.app
 
 #RENDER 
-# NEXT_PUBLIC_API_URL=https://ecommerce-wj0p.onrender.com
+NEXT_PUBLIC_API_URL=https://ecommerce-wj0p.onrender.com
